[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/images/rally_car.png" type="Texture" id=1]
[ext_resource path="res://scripts/CarDrift.gd" type="Script" id=2]
[ext_resource path="res://assets/images/rally_car_modulate.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/RacingSansOne-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/sounds/car_collision3.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/car_drift.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/engine.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/DriftTrailEmitter.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/images/whitePuff14.png" type="Texture" id=10]
[ext_resource path="res://assets/images/rally_car_brake_light.png" type="Texture" id=11]
[ext_resource path="res://assets/images/rally_car_tire.png" type="Texture" id=12]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.4

[sub_resource type="CapsuleShape2D" id=9]
radius = 20.0
height = 42.0

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0.4125 ), 0.0, 1.21558, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.0814249, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.329412, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=10]
size = 36
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="CarDrift" type="RigidBody2D"]
position = Vector2( -26, 0 )
z_index = 10
collision_layer = 6
collision_mask = 3
physics_material_override = SubResource( 2 )
contacts_reported = 2
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 26, 0 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="DriftFogParticles" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 25
lifetime = 2.0
local_coords = false
texture = ExtResource( 10 )
emission_shape = 1
emission_sphere_radius = 20.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 25.0
angular_velocity = 20.0
damping = 14.5
angle = 360.0
angle_random = 1.0
scale_amount = 0.15
scale_amount_random = 0.2
scale_amount_curve = SubResource( 7 )
color = Color( 0.105882, 0.105882, 0.105882, 1 )
color_ramp = SubResource( 8 )

[node name="DriftTrailEmitterLeft" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -18 )

[node name="DriftTrailEmitterRight" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, 18 )

[node name="FrontLeftWheelPolygon" type="Node2D" parent="."]
position = Vector2( 52, -17 )

[node name="WheelSprite" type="Polygon2D" parent="FrontLeftWheelPolygon"]
position = Vector2( -28.3204, 17 )
rotation = 1.5708
scale = Vector2( 0.300203, 0.300203 )
texture = ExtResource( 12 )
polygon = PoolVector2Array( -46, -114.5, -45, -114.5, -45, -78.5, -46, -78.5, -46, -77.5, -63, -77.5, -63, -78.5, -64, -78.5, -64, -114.5, -63, -114.5, -63, -115.5, -46, -115.5 )
uv = PoolVector2Array( 25, 33, 26, 33, 26, 69, 25, 69, 25, 70, 8, 70, 8, 69, 7, 69, 7, 33, 8, 33, 8, 32, 25, 32 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ) ]

[node name="FrontRightWheelPolygon" type="Node2D" parent="."]
position = Vector2( 52, 17 )

[node name="WheelSprite" type="Polygon2D" parent="FrontRightWheelPolygon"]
position = Vector2( -28.3204, -17 )
rotation = -1.57079
scale = Vector2( 0.3, -0.3 )
texture = ExtResource( 12 )
polygon = PoolVector2Array( -46, -114.5, -45, -114.5, -45, -78.5, -46, -78.5, -46, -77.5, -63, -77.5, -63, -78.5, -64, -78.5, -64, -114.5, -63, -114.5, -63, -115.5, -46, -115.5 )
uv = PoolVector2Array( 25, 33, 26, 33, 26, 69, 25, 69, 25, 70, 8, 70, 8, 69, 7, 69, 7, 33, 8, 33, 8, 32, 25, 32 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ) ]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 23.6796, 0 )
rotation = 1.5708
scale = Vector2( 0.3, 0.295 )
texture = ExtResource( 1 )

[node name="SpriteModulate" type="Sprite" parent="."]
position = Vector2( 23.6796, 0 )
rotation = 1.5708
scale = Vector2( 0.3, 0.295 )
texture = ExtResource( 3 )

[node name="SpriteBrakeLight" type="Polygon2D" parent="."]
position = Vector2( 23.68, 0 )
rotation = 1.5708
scale = Vector2( 0.3, 0.295 )
texture = ExtResource( 11 )
polygon = PoolVector2Array( -33.9, 107.5, -37.2, 114.5, -37.9, 114.5, -42.9, 127.5, -52, 127.5, -60, 121.5, -60, 116.2, -58, 95.9, -58, 91.3, -50.1, 88.4, 63, 95.3, 63, 100.9, 64.6, 117.5, 59.1, 117.5, 46.9, 127.5, 40, 124.3, 40, 86.9 )
uv = PoolVector2Array( 37.1, 255, 33.8, 262, 33.1, 262, 28.1, 275, 19, 275, 11, 269, 11, 263.7, 13, 243.4, 13, 238.8, 20.9, 235.9, 134, 242.8, 134, 248.4, 135.6, 265, 130.1, 265, 117.9, 275, 111, 271.8, 111, 234.4 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ), PoolIntArray( 10, 11, 12, 13, 14, 15, 16 ) ]

[node name="CollisionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Fx"

[node name="DriftSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
pitch_scale = 0.8
bus = "Fx"

[node name="EngineSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "Fx"

[node name="ControlAnchor" type="Node2D" parent="."]
position = Vector2( 26, 0 )
z_index = 100

[node name="SpeedLabel" type="Label" parent="ControlAnchor"]
visible = false
margin_left = -34.0
margin_top = -75.604
margin_right = 35.0
margin_bottom = -28.604
custom_fonts/font = SubResource( 10 )
text = "200"
